--- a/Exercice3/APP_FILMS/templates/films/films_afficher.html
+++ b/Exercice3/APP_FILMS/templates/films/films_afficher.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
-{% block title %} Afficher USERS {% endblock %}
+{% block title %} Afficher user {% endblock %}
 {% block body %}
 <div class="container">
+	<div class="row">
 		<div class="col-md-12">
+			<p>
+				User à disposition.
+			</p>
             <table class="table table-bordered table-sm">
             {% if data %}
                 <thead>
@@ -11,19 +15,16 @@
                             id
                         </th>
                         <th class="align-middle">
-                            Titre
+                            Nom
                         </th>
                         <th class="align-middle">
-                            Durée
+
                         </th>
                         <th class="align-middle">
-                            Date sortie
+
                         </th>
                         <th class="align-middle">
-                            Description
-                        </th>
-                        <th class="align-middle">
-                            Affiche
+
                         </th>
                     </tr>
                 </thead>
@@ -38,23 +39,14 @@
 						<td class="align-middle">
 							{{ row.Nom }}
 						</td>
-						<td class="align-middle">
-							{{ row.Prenom }}
+						<td class="text-center" class="align-middle">
+							<a class="btn btn-primary" href="{{ url_for('films_add') }}" role="button">Ajouter</a>
 						</td>
-						<td class="align-middle">
-							{{ row.UserNom }}
+						<td class="text-center" class="align-middle">
+							<a class="btn btn-warning" href="{{ url_for('films_edit', id_user_edit_html=row.id_user) }}" role="button">Edit</a>
 						</td>
-						<td class="align-middle">
-							<img class="img-thumbnail" src={{ True }} style="border: 0;" alt = "Covid-19 grand semi-confinement mod 104">
-						</td>
-						<td class="align-middle">
-							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Ajouter</a>
-						</td>
-						<td class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Edit</a>
-						</td>
-						<td class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Delete</a>
+						<td class="text-center" class="align-middle">
+							<a class="btn btn-danger" href="{{ url_for('films_select_delete', id_user_delete_html=row.id_user) }}" role="button">Delete</a>
 						</td>
 					</tr>
 				</tbody>
@@ -65,12 +57,14 @@
 							Aucun user.
 						</td>
 						<td>
-							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Add</a>
+							<a class="btn btn-primary" href="{{ url_for('films_add') }}" role="button">Ajouter</a>
 						</td>
 					</tr>
 				</tbody>
             {% endfor %}
 			</table>
 		</div>
+	</div>
 </div>
 {% endblock %}
+
