--- a/Exercice3/APP_INVENTORY/templates/material/material_add.html
+++ b/Exercice3/APP_INVENTORY/templates/material/material_add.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
-{% block title %} Ajouter un user{% endblock %}
+{% block title %} Ajouter un material{% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Clavioter un nouveau user
+				Clavioter un nouveau material
 			</p>
 			<form method="POST">
 				<div class="form-group">
-					<label for= "value_user">
-						Nom User
+					<label for="Nom_material">
+						Nom material
 					</label>
-					<input type ="text" class="form-control" name="name_user_html" />
+					<input type ="text" class="form-control" name="name_material_html" />
 				</div>
 				<button type="submit" class="btn btn-primary">
-					Enregistrer le user
+					Enregistrer le material
 				</button>
 			</form>
 		</div>
