--- a/Exercice3/APP_INVENTORY/templates/material/material_edit.html
+++ b/Exercice3/APP_INVENTORY/templates/material/material_edit.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Edit USER{% endblock %}
+{% block title %}Edit material{% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
@@ -7,15 +7,15 @@
 			<p>
 				Modifier ce material.
 			</p>
-			<form method="POST" action="{{ url_for('films_update') }}">
+			<form method="POST" action="{{ url_for('material_update') }}">
                 <table class="table table-bordered table-sm">
                     <thead>
                         <tr>
                             <th>
-                                id user
+                                id material
                             </th>
                             <th>
-                                User
+                                material
                             </th>
                         </tr>
                     </thead>
@@ -23,10 +23,10 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <input type="hidden" name="id_user_edit_html" value="{{ row.id_user }}"/>
+                                    <input type="hidden" name="id_material_edit_html" value="{{ row.id_material }}"/>
                                 </td>
                                 <td>
-                                    <input type = "text" name = "name_edit_user_html" value="{{ row.Nom }}"/>
+                                    <input type = "text" name = "name_edit_material_html" value="{{ row.material }}"/>
                                 </td>
                                 <td>
                                     <button class="btn btn-warning" type="submit">Update</button>
