--- a/Exercice3/APP_INVENTORY/templates/user/user_add.html
+++ b/Exercice3/APP_INVENTORY/templates/user/user_add.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
-{% block title %} Ajouter un Material{% endblock %}
+{% block title %} Ajouter un user{% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Clavioter un nouveau Material
+				Clavioter un nouveau user
 			</p>
 			<form method="POST">
 				<div class="form-group">
-					<label for= "value_material">
-						Nom Material
+					<label for= "Nom">
+						Nom User
 					</label>
-					<input type ="text" class="form-control" name="name_material_html" />
+					<input type ="text" class="form-control" name="Nom_html" />
 				</div>
 				<button type="submit" class="btn btn-primary">
-					Enregistrer le material
+					Enregistrer le user
 				</button>
 			</form>
 		</div>
