--- a/Exercice3/APP_INVENTORY/templates/user/user_delete.html
+++ b/Exercice3/APP_INVENTORY/templates/user/user_delete.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
-{% block title %}Edit MATERIAL{% endblock %}
+{% block title %}DELETE USER{% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Modifier ce material.
+				Effacer ce user.
 			</p>
-			<form method="POST" action="{{ url_for('genres_update') }}">
+			<form method="POST" action="{{ url_for('user_delete') }}">
                 <table class="table table-bordered table-sm">
                     <thead>
                         <tr>
                             <th>
-                                id material
+                                id user
                             </th>
                             <th>
-                                Material
+                                Nom
                             </th>
                         </tr>
                     </thead>
@@ -23,13 +23,13 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <input type="hidden" name="id_material_edit_html" value="{{ row.id_material }}"/>
+                                    <input type="hidden" name="id_user_delete_html" value="{{ row.id_user }}"/>
                                 </td>
                                 <td>
-                                    <input type = "text" name = "name_edit_material_html" value="{{ row.material }}"/>
+                                    {{ row.Nom }}
                                 </td>
                                 <td>
-                                    <button class="btn btn-warning" type="submit">Update</button>
+                                    <button class="btn btn-danger" type="submit">EFFACER</button>
                                 </td>
                             </tr>
                         </tbody>
