--- a/Exercice3/APP_INVENTORY/templates/base.html
+++ b/Exercice3/APP_INVENTORY/templates/base.html
@@ -24,7 +24,7 @@
 	-->
 
 	<!-- https://bootswatch.com/cyborg/ -->
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/cerulean/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootswatch-4.4.1/cyborg/bootstrap.min.css') }}">
 	<!-- https://flask.palletsprojects.com/en/1.1.x/patterns/favicon/ -->
 	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
@@ -40,32 +40,23 @@
 <!-- Navigation -->
 <div class="container">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="{{ url_for('home_dans_routes_pour_exemple_hommage_m_el_vyn_mal_herbe') }}">MOD 104 OSMAN EPSIC</a>
+	<a class="navbar-brand" href="{{ url_for('home_dans_routes_pour_exemple_hommage_m_el_vyn_mal_herbe') }}">MOD 104 MOHAMMED EPSIC</a>
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item">
-<!--		Afficher la liste des genres dans l'ordre (ASC) et tous les genres (0)-->
-			<a class="nav-link" href="{{ url_for('genres_afficher', order_by='ASC', id_material_sel=0) }}">MATERIAL</a>
+<!--		Afficher la liste des material dans l'ordre (ASC) et tous les material (0)-->
+			<a class="nav-link" href="{{ url_for('material_afficher', order_by='ASC', id_material_sel=0) }}">MATERIALS</a>
 		  </li>
 		  <li class="nav-item dropdown">
 			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			  USER
+			  user
 			</a>
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-			  <a class="dropdown-item" href="{{ url_for('films_afficher', order_by='ASC', id_user_sel=0) }}">USER</a>
-			  <a class="dropdown-item" href="{{ url_for('genres_films_afficher_concat', id_film_sel=0) }}">USER and MATERIAL</a>
-			</div>
-		  </li>
-		  <li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			  Autres démos
-			</a>
-			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-			  <a class="dropdown-item" href="{{ url_for('personnes_taille_dict') }}">Démo pour les ERREURS</a>
-			  <a class="dropdown-item" href="404.html">404</a>
+			 <a class="dropdown-item" href="{{ url_for('user_afficher') }}">USERS</a>
+                <a class="dropdown-item" href="{{ url_for('materials_users_afficher_concat', id_user_sel=0) }}">Material and User</a>
 			</div>
 		  </li>
 		</ul>
