--- a/Exercice3/APP_INVENTORY/templates/home.html
+++ b/Exercice3/APP_INVENTORY/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Homepage USERS {% endblock %}
+{% block title %} Homepage user {% endblock %}
 {% block body %}
 <div class="container-fluid">
 	<div class="row">
@@ -20,7 +20,7 @@
 					Il faut que mon code soit adapté à votre base de données.
 				</li>
 				<li class="list-item">
-					La table intermédiaire "t_genres_films" a son système de "TAGS". Votre table intermédiaire doit aussi avoir ce système de "TAGS".<br>A l'aide de la souris, on associe un(des) genre(s) à un film, de façon assez rapide et simple.<br>Il s'agit d'une liste déroulante avec choix multiple. Cette liste a l'avantage d'afficher dans un petit espace tous les genres disponibles, ainsi l'utilisateur n'est pas obligé de faire défiler toute la liste déroulante.
+					La table intermédiaire "t_material_user" a son système de "TAGS". Votre table intermédiaire doit aussi avoir ce système de "TAGS".<br>A l'aide de la souris, on associe un(des) genre(s) à un user, de façon assez rapide et simple.<br>Il s'agit d'une liste déroulante avec choix multiple. Cette liste a l'avantage d'afficher dans un petit espace tous les material disponibles, ainsi l'utilisateur n'est pas obligé de faire défiler toute la liste déroulante.
 				</li>
 			</ul>
 			<h3>
@@ -31,16 +31,16 @@
 					Il y a un template CSS (enfin !!!).
 				</li>
 				<li class="list-item">
-					On peut réaliser toutes les actions CRUD (Create Read Update Delete) sur la table "t_genres".
+					On peut réaliser toutes les actions CRUD (Create Read Update Delete) sur la table "t_material".
 				</li>
 				<li class="list-item">
-					Pour t_films uniquement l'action Read (afficher).
+					Pour t_user uniquement l'action Read (afficher).
 				</li>
 				<li class="list-item">
-					Pour t_genres_films (la table intermédiaire) on peut ajouter un ou des genres au film sélectionné, ou on peut les enlever.
+					Pour t_material_user (la table intermédiaire) on peut ajouter un ou des material au user sélectionné, ou on peut les enlever.
 				</li>
 				<li class="list-item">
-					Pour ajouter (gérer) un genre, il faut cliquer sur "genres" du menu au haut de la page.
+					Pour ajouter (gérer) un genre, il faut cliquer sur "material" du menu au haut de la page.
 				</li>
 			</ul>
 			<h3>
