--- a/Exercice3/APP_INVENTORY/templates/material_user/material_user_afficher.html
+++ b/Exercice3/APP_INVENTORY/templates/material_user/material_user_afficher.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Afficher MATERIAL {% endblock %}
+{% block title %} Afficher FILMS {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="col-md-12">
@@ -26,20 +26,20 @@
 						{{ row.Nom }}
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Ajouter</a>
+						<a class="btn btn-primary" href="{{ url_for('user_add') }}" role="button">Ajouter</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-warning" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Edit</a>
+						<a class="btn btn-warning" href="{{ url_for('user_edit', id_user_edit_html=row.id_user) }}" role="button">Edit</a>
 					  </th>
 					  <th class="align-middle">
-						<a class="btn btn-danger" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Delete</a>
+						<a class="btn btn-danger" href="{{ url_for('user_delete', id_user_delete_html=row.id_user) }}" role="button">Delete</a>
 					  </th>
 					<tr>
 						<td class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('gf_edit_material_user_selected', id_user_material_edit_html=row.id_user) }}" role="button">Modifier</a>
+							<a class="btn btn-warning" href="{{ url_for('gf_edit_material_user_selected', id_user_materials_edit_html=row.id_user) }}" role="button">Modifier</a>
 						</td>
 						<td class="align-middle" colspan="5">
-							{{ row.USERMATERIAL|default("PAS DE MATERIAL", True) }}
+							{{ row.MaterialsUsers|default("PAS DE GENRES", True) }}
 						</td>
 					</tr>
 				</tr>
@@ -48,7 +48,7 @@
 				<tbody>
 					<tr>
 						<td>
-							Aucun Material.
+							Aucun film.
 						</td>
 						<td>
 							<a class="btn btn-primary" href="{{ url_for('avertissement_sympa_pour_geeks') }}" role="button">Add</a>
