--- a/Exercice3/APP_INVENTORY/templates/user/user_afficher.html
+++ b/Exercice3/APP_INVENTORY/templates/user/user_afficher.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Afficher user {% endblock %}
+{% block title %} Afficher User {% endblock %}
 {% block body %}
 <div class="container">
 	<div class="row">
@@ -17,15 +17,6 @@
                         <th class="align-middle">
                             Nom
                         </th>
-                        <th class="align-middle">
-
-                        </th>
-                        <th class="align-middle">
-
-                        </th>
-                        <th class="align-middle">
-
-                        </th>
                     </tr>
                 </thead>
             {% endif %}
@@ -40,13 +31,13 @@
 							{{ row.Nom }}
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-primary" href="{{ url_for('films_add') }}" role="button">Ajouter</a>
+							<a class="btn btn-primary" href="{{ url_for('user_add') }}" role="button">Ajouter</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-warning" href="{{ url_for('films_edit', id_user_edit_html=row.id_user) }}" role="button">Edit</a>
+							<a class="btn btn-warning" href="{{ url_for('user_edit', id_user_edit_html=row.id_user) }}" role="button">Edit</a>
 						</td>
 						<td class="text-center" class="align-middle">
-							<a class="btn btn-danger" href="{{ url_for('films_select_delete', id_user_delete_html=row.id_user) }}" role="button">Delete</a>
+							<a class="btn btn-danger" href="{{ url_for('user_select_delete', id_user_delete_html=row.id_user) }}" role="button">Delete</a>
 						</td>
 					</tr>
 				</tbody>
@@ -57,7 +48,7 @@
 							Aucun user.
 						</td>
 						<td>
-							<a class="btn btn-primary" href="{{ url_for('films_add') }}" role="button">Ajouter</a>
+							<a class="btn btn-primary" href="{{ url_for('user_add') }}" role="button">Ajouter</a>
 						</td>
 					</tr>
 				</tbody>
